--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ body {
   //background-color: lightblue;
 
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 p {
@@ -21,17 +21,22 @@ p {
 @mixin bg-image {
   width: 100%;
   height: 100%;
-  background-size: cover;
-  display: flex;
+
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   position: absolute;
-  background-position: center top;
-  background-attachment: fixed;
+  //overflow: hidden;
+
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   background-size: cover;
+
   //filter: blur(2px) contrast(50%);
   //transform: scale(1.01);
+  /* background: no-repeat center center fixed;
+  background-size: cover; */
 
   z-index: -1;
 }
@@ -41,19 +46,16 @@ p {
 .bg-image-duskpowerlines {
   @include bg-image();
   background-image: url(/src/img/duskpowerlines.jpg); //JS
-
-  //This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you!
-  //max-width: 100%;
-  //max-height: 100vh;
-  //margin: auto;
 }
 .bg-image-fieldsunset {
   @include bg-image();
   background-image: url(/src/img/fieldsunset.jpg); //JS
+  background-position: center;
 }
 .bg-image-highsky {
   @include bg-image();
   background-image: url(/src/img/highsky.jpg); //JS
+  background-position: center top;
 }
 .bg-image-nightbay {
   @include bg-image();
@@ -66,10 +68,12 @@ p {
 .bg-image-nighttrain {
   @include bg-image();
   background-image: url(/src/img/nighttrain.jpg); //JS
+  background-position: center top;
 }
 .bg-image-valley {
   @include bg-image();
   background-image: url(/src/img/valley.jpg); //JS
+  background-position: center top;
 }
 .bg-image-personsunsetdew {
   @include bg-image();
@@ -129,29 +133,10 @@ h3 {
   background-color: rgba(53, 81, 92, 0.8);
   border-radius: 1rem;
   padding: 4rem;
-}
-
-//Flip flex-column here
-.flex-column {
   display: flex;
   flex-direction: column;
-}
-
-.flex-center {
   justify-content: center;
   align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.hidden {
-  display: none;
 }
 
 //CHOICE BUTTONS
@@ -181,4 +166,4 @@ h3 {
   transform: none;
 } */
 
-//ss
+//ssssss
